src/lib/generated-parser.ts
// THIS FILE IS GENERATED - DO NOT EDIT
// Generated by build/generate-parser.js

// @ts-nocheck - This file is generated, so we disable type checking
/* eslint-disable */

import { BtMetatype } from './types';

// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { BibFile: peg$parseBibFile };
  var peg$startRuleFunction = peg$parseBibFile;

  var peg$c0 = "%";
  var peg$c1 = "\n";
  var peg$c2 = "@";
  var peg$c3 = "{";
  var peg$c4 = "}";
  var peg$c5 = "(";
  var peg$c6 = ")";
  var peg$c7 = ",";
  var peg$c8 = "=";
  var peg$c9 = "#";
  var peg$c10 = "\"";
  var peg$c11 = "\"\"";
  var peg$c12 = "\\\"";
  var peg$c13 = "-";

  var peg$r0 = /^[^\n]/;
  var peg$r1 = /^[^@%]/;
  var peg$r2 = /^[({]/;
  var peg$r3 = /^[)}]/;
  var peg$r4 = /^[a-zA-Z0-9_\-:.+\/]/;
  var peg$r5 = /^[a-zA-Z]/;
  var peg$r6 = /^[sS]/;
  var peg$r7 = /^[tT]/;
  var peg$r8 = /^[rR]/;
  var peg$r9 = /^[iI]/;
  var peg$r10 = /^[nN]/;
  var peg$r11 = /^[gG]/;
  var peg$r12 = /^[pP]/;
  var peg$r13 = /^[eE]/;
  var peg$r14 = /^[aA]/;
  var peg$r15 = /^[mM]/;
  var peg$r16 = /^[bB]/;
  var peg$r17 = /^[lL]/;
  var peg$r18 = /^[cC]/;
  var peg$r19 = /^[oO]/;
  var peg$r20 = /^[^}]/;
  var peg$r21 = /^[^)]/;
  var peg$r22 = /^[^})]/;
  var peg$r23 = /^[^"]/;
  var peg$r24 = /^[^{}]/;
  var peg$r25 = /^[0-9]/;
  var peg$r26 = /^[^,}]/;
  var peg$r27 = /^[a-zA-Z0-9!$&*+\-.\/:<>?[\]\^_`|]/;
  var peg$r28 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("%", false);
  var peg$e1 = peg$classExpectation(["\n"], true, false);
  var peg$e2 = peg$literalExpectation("\n", false);
  var peg$e3 = peg$anyExpectation();
  var peg$e4 = peg$classExpectation(["@", "%"], true, false);
  var peg$e5 = peg$literalExpectation("@", false);
  var peg$e6 = peg$literalExpectation("{", false);
  var peg$e7 = peg$literalExpectation("}", false);
  var peg$e8 = peg$literalExpectation("(", false);
  var peg$e9 = peg$literalExpectation(")", false);
  var peg$e10 = peg$literalExpectation(",", false);
  var peg$e11 = peg$literalExpectation("=", false);
  var peg$e12 = peg$classExpectation(["(", "{"], false, false);
  var peg$e13 = peg$classExpectation([")", "}"], false, false);
  var peg$e14 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-", ":", ".", "+", "/"], false, false);
  var peg$e15 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e16 = peg$classExpectation(["s", "S"], false, false);
  var peg$e17 = peg$classExpectation(["t", "T"], false, false);
  var peg$e18 = peg$classExpectation(["r", "R"], false, false);
  var peg$e19 = peg$classExpectation(["i", "I"], false, false);
  var peg$e20 = peg$classExpectation(["n", "N"], false, false);
  var peg$e21 = peg$classExpectation(["g", "G"], false, false);
  var peg$e22 = peg$classExpectation(["p", "P"], false, false);
  var peg$e23 = peg$classExpectation(["e", "E"], false, false);
  var peg$e24 = peg$classExpectation(["a", "A"], false, false);
  var peg$e25 = peg$classExpectation(["m", "M"], false, false);
  var peg$e26 = peg$classExpectation(["b", "B"], false, false);
  var peg$e27 = peg$classExpectation(["l", "L"], false, false);
  var peg$e28 = peg$classExpectation(["c", "C"], false, false);
  var peg$e29 = peg$classExpectation(["o", "O"], false, false);
  var peg$e30 = peg$classExpectation(["}"], true, false);
  var peg$e31 = peg$classExpectation([")"], true, false);
  var peg$e32 = peg$classExpectation(["}", ")"], true, false);
  var peg$e33 = peg$literalExpectation("#", false);
  var peg$e34 = peg$literalExpectation("\"", false);
  var peg$e35 = peg$classExpectation(["\""], true, false);
  var peg$e36 = peg$literalExpectation("\"\"", false);
  var peg$e37 = peg$literalExpectation("\\\"", false);
  var peg$e38 = peg$classExpectation(["{", "}"], true, false);
  var peg$e39 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e40 = peg$literalExpectation("-", false);
  var peg$e41 = peg$classExpectation([",", "}"], true, false);
  var peg$e42 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "!", "$", "&", "*", "+", "-", ".", "/", ":", "<", ">", "?", "[", "]", "^", "_", "`", "|"], false, false);
  var peg$e43 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(entries) { 
      return entries.filter(e => e !== null); 
    };
  var peg$f1 = function() { return null; };
  var peg$f2 = function() { return null; };
  var peg$f3 = function(type, key) {
      return {
        type: type.toLowerCase(),
        key: key || '',
        metatype: BtMetatype.REGULAR,
        fields: {}
      };
    };
  var peg$f4 = function(type, key) {
      return {
        type: type.toLowerCase(),
        key: key || '',
        metatype: BtMetatype.REGULAR,
        fields: {}
      };
    };
  var peg$f5 = function(type, key, fields) {
      const entry = {
        type: type.toLowerCase(),
        key: key || '',
        metatype: BtMetatype.REGULAR,
        fields: {}
      };
      
      // Process field assignments
      for (const field of fields) {
        if (field) {
          const [name, value] = field;
          entry.fields[name.toLowerCase()] = value;
        }
      }
      
      return entry;
    };
  var peg$f6 = function(type, key, fields) {
      const entry = {
        type: type.toLowerCase(),
        key: key || '',
        metatype: BtMetatype.REGULAR,
        fields: {}
      };
      
      // Process field assignments
      for (const field of fields) {
        if (field) {
          const [name, value] = field;
          entry.fields[name.toLowerCase()] = value;
        }
      }
      
      return entry;
    };
  var peg$f7 = function(s, name, value) {
      const fieldName = name.toLowerCase();
      const entry = {
        type: "string",
        key: "",
        metatype: BtMetatype.MACRODEF,
        fields: {}
      };
      
      entry.fields[fieldName] = value;
      return entry;
    };
  var peg$f8 = function(s, fields) {
      const entry = {
        type: "string",
        key: "",
        metatype: BtMetatype.MACRODEF,
        fields: {}
      };
      
      // Process multiple macros in the same @string entry
      for (const field of fields) {
        if (field) {
          const [name, value] = field;
          const fieldName = name.toLowerCase();
          entry.fields[fieldName] = value;
        }
      }
      
      return entry;
    };
  var peg$f9 = function(p, value) {
      return {
        type: "preamble",
        key: "",
        metatype: BtMetatype.PREAMBLE,
        fields: { content: value }
      };
    };
  var peg$f10 = function(c, content) {
      return {
        type: "comment",
        key: "",
        metatype: BtMetatype.COMMENT,
        fields: { content: content }
      };
    };
  var peg$f11 = function(chars) { return chars.join(''); };
  var peg$f12 = function() { return ''; };
  var peg$f13 = function(chars) { return chars.join('').toLowerCase(); };
  var peg$f14 = function() { return "string"; };
  var peg$f15 = function() { return "preamble"; };
  var peg$f16 = function() { return "comment"; };
  var peg$f17 = function(chars) { return chars.join(''); };
  var peg$f18 = function(chars) { return chars.join(''); };
  var peg$f19 = function(chars) { return chars.join(''); };
  var peg$f20 = function(field, rest) {
      const fields = field ? [field] : [];
      for (const r of rest) {
        if (r[3]) fields.push(r[3]);
      }
      return fields;
    };
  var peg$f21 = function(field, rest) {
      const fields = field ? [field] : [];
      for (const r of rest) {
        if (r[3]) fields.push(r[3]);
      }
      return fields;
    };
  var peg$f22 = function(name, value) { return [name, value]; };
  var peg$f23 = function(head, tail) {
      if (tail.length === 0) return head;
      // For concatenation, return a node representing the operation
      const parts = [head];
      for (const t of tail) {
        parts.push(t[3]);
      }
      return ['concat', ...parts];
    };
  var peg$f24 = function(name) {
      // Return a node for macro reference instead of immediately resolving
      return ['macro', name];
    };
  var peg$f25 = function(content) { 
      return content.join(''); 
    };
  var peg$f26 = function() { return ''; };
  var peg$f27 = function() { return '"'; };
  var peg$f28 = function(content) { return content; };
  var peg$f29 = function(parts) { return parts.join(''); };
  var peg$f30 = function(content) { return '{' + content + '}'; };
  var peg$f31 = function(char) { return char; };
  var peg$f32 = function(first, dash, second, rest) { 
      return first.join('') + dash.join('') + second.join('') + rest.join('');
    };
  var peg$f33 = function(digits) { return digits.join(''); };
  var peg$f34 = function(chars) { return chars.join(''); };
  var peg$f35 = function() { return null; };
  var peg$f36 = function() { return null; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseBibFile() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseEntry();
    if (s2 === peg$FAILED) {
      s2 = peg$parseComment();
      if (s2 === peg$FAILED) {
        s2 = peg$parseJunk();
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseEntry();
      if (s2 === peg$FAILED) {
        s2 = peg$parseComment();
        if (s2 === peg$FAILED) {
          s2 = peg$parseJunk();
        }
      }
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseComment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 37) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r0.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r0.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
      if (input.charCodeAt(peg$currPos) === 10) {
        s3 = peg$c1;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s3 === peg$FAILED) {
        s3 = peg$parseEOF();
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEOF() {
    var s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = undefined;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseJunk() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r1.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = input.charAt(peg$currPos);
        if (peg$r1.test(s2)) {
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseEntry() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 64) {
      s2 = peg$c2;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parseEntryTypeWord();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 123) {
          s5 = peg$c3;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseEntryKey();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 125) {
            s9 = peg$c4;
            peg$currPos++;
          } else {
            s9 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e7); }
          }
          if (s9 !== peg$FAILED) {
            s10 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f3(s3, s7);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 64) {
        s2 = peg$c2;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEntryTypeWord();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 40) {
            s5 = peg$c5;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            s7 = peg$parseEntryKey();
            if (s7 === peg$FAILED) {
              s7 = null;
            }
            s8 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 41) {
              s9 = peg$c6;
              peg$currPos++;
            } else {
              s9 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e9); }
            }
            if (s9 !== peg$FAILED) {
              s10 = peg$parse_();
              peg$savedPos = s0;
              s0 = peg$f4(s3, s7);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 64) {
          s2 = peg$c2;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEntryTypeWord();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c3;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              s7 = peg$parseEntryKey();
              if (s7 === peg$FAILED) {
                s7 = null;
              }
              s8 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 44) {
                s9 = peg$c7;
                peg$currPos++;
              } else {
                s9 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e10); }
              }
              if (s9 !== peg$FAILED) {
                s10 = peg$parse_();
                s11 = peg$parseFieldList();
                s12 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 125) {
                  s13 = peg$c4;
                  peg$currPos++;
                } else {
                  s13 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e7); }
                }
                if (s13 !== peg$FAILED) {
                  s14 = peg$parse_();
                  peg$savedPos = s0;
                  s0 = peg$f5(s3, s7, s11);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 64) {
            s2 = peg$c2;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parseEntryTypeWord();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 40) {
                s5 = peg$c5;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e8); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                s7 = peg$parseEntryKey();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                s8 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 44) {
                  s9 = peg$c7;
                  peg$currPos++;
                } else {
                  s9 = peg$FAILED;
